# ecs

./: .gitignore  CMakeLists.txt  Dependencies.cmake  FoxdenLogo.kra  Test.cmake  execute.bat  execute.sh  gemini.md
doc/: main.tex
src/: main.cpp
src/components/: test_component.hpp  test_component_1.hpp
src/ecs/: definitions.hpp  registry.hpp  sparse_set.hpp  view.hpp
tests/: test_registry.cpp  test_sparse_set_removel.cpp  test_view.cpp
